feat: officer-cli can login provision the battlefield, but still cannot continously monitor it.
